--- a/mitsuha/Index.html
+++ b/mitsuha/Index.html
@@ -1120,7 +1120,7 @@ ul.social-network li {
 
         <li class="nav-item">
 
-          <a class="nav-link active" href="/mitsuha/">Mitsuha</a>
+          <a class="nav-link active" href="/">Mitsuha</a>
 
         </li>
 
