--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ ul.social-network li {
     <p></p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="/mitsuha/">Mitsuha</a>
+          <a class="nav-link" href="#">Link Error</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link Error</a>
