--- a/caca/profile/index.html
+++ b/caca/profile/index.html
@@ -1,1 +1,112 @@
+<html>
+<head>
+<style>
 
+body {
+background-color: #eee;
+font-family: arial, sans-serif, nevis;
+color: black;
+} 
+
+.kolom {
+width: 850px;
+margin: auto;
+background-color: #fff;
+font-family: nevis;
+color: black;
+border-radius: 20px;
+box-shadow: 0 15px 0 black;
+}
+
+.kolom-dua {
+width: 700px;
+margin: auto;
+background-color: #eff;
+font-family: nevis;
+color: black;
+border-radius: 0px;
+box-shadow: 0 1px 0 black;
+}
+			
+.header {
+padding: 30px;
+}
+						
+.type {
+text-decoration: none;
+text-align: center;
+font-size: 50px;
+font-family: nevis;
+background-color: magenta;
+width: 600px;
+opacity: 90%;
+color: white;
+display: block;
+border-radius: 15px;
+box-shadow: 0 10px 0 black;
+} 
+
+.anim {
+width: 300px;
+heigth: 600px;
+background-color: #444;
+animation: animasinya 1s ease 1 reverse forwards running;
+} 
+								
+@keyframes animasinya {
+0% {
+background-color: cyan;
+}
+25% {
+background-color: green;
+} 
+50% {
+background-color: lightblue;
+}
+75% {
+background-color: yellow;
+} 
+100% {
+background-color: brown;
+}
+} 
+
+</style>
+</head>
+<body>
+
+<br><br>
+<div class="kolom">
+<center><image src="https://f.top4top.io/p_219133l471.png"></image></center>
+<center><h1>profile</h1></center>
+<center>____________________</center>
+<center><h1>INFORMASI UMUM :</h1></center>
+</center><div class="kolom-dua">
+<br>
+<center><h3>Nama Chacha Fredicha Eka C</h3></center>
+<center><h3>Umur 14 Tahun</h3></center>
+<center><h3>Tanggal Lahir 10 April 2007</h3></center>
+<center><h3>Gender Laki-Laki</h3></center>
+<br>
+</div>
+<br>
+<center>____________________</center>
+<center><h1>INFORMASI DETAIL :</h1></center>
+<div class="kolom-dua">
+<br>
+<center><h3>Tinggi 160Cm +</h3></center>
+<center><h3>Berat 45Kg</h3></center>
+<center><h3>Alamat Yogyakarta, Sleman</h3></center>
+<center><h3>Sekolah Smpn 3 Gamping</h3></center>
+<br>
+</div>
+<br>
+</div>
+<br>
+	
+<center><a style="text-decoration:none" href="https://ChacaX.github.io"><div class="type">HOME BACK <span>&rarr;</span></div></a></center>
+
+<br><br>
+	
+</body>
+</html>
