--- a/caca/index.html
+++ b/caca/index.html
@@ -140,7 +140,7 @@ opacity: 25%;
 <br>
 </div>
 <br>
-<right><a style="text-decoration:none" href="/profile/">SELENGKAPNYA</a></right>
+<right><a style="text-decoration:none" href="/caca/profile/">SELENGKAPNYA</a></right>
 </center>
 </div>
 </div>
@@ -157,7 +157,7 @@ opacity: 25%;
 <br>
 </div>
 <br>
-<right><a style="text-decoration:none" href="/galeri/">SELENGKAPNYA</a></right>
+<right><a style="text-decoration:none" href="/caca/galeri/">SELENGKAPNYA</a></right>
 </div>
 </div>
 </div>
