--- a/caca/galeri/index.html
+++ b/caca/galeri/index.html
@@ -127,7 +127,7 @@ opacity: 25%;
 
 <br>
 <br>
-<center><a style="text-decoration:none" href="https://ChacaX.github.io"><div class="type">HOME BACK <span>&rarr;</span></div></a></center>
+<center><a style="text-decoration:none" href="/caca/"><div class="type">HOME BACK <span>&rarr;</span></div></a></center>
 <br>
 
 <br><br>
