--- a/caca/profile/index.html
+++ b/caca/profile/index.html
@@ -104,7 +104,7 @@ background-color: brown;
 </div>
 <br>
 	
-<center><a style="text-decoration:none" href="https://ChacaX.github.io"><div class="type">HOME BACK <span>&rarr;</span></div></a></center>
+<center><a style="text-decoration:none" href="/caca/"><div class="type">HOME BACK <span>&rarr;</span></div></a></center>
 
 <br><br>
 	
