--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ ul.social-network li {
     </div>
 	<div class="row">
 		<div class="col-md-12 copy">
-			<p class="text-center">&copy; Copyright 2019 - Muhammad Ridwan Reynaldy.  All rights reserved.</p>
+			<p class="text-center">&copy; Copyright 2019 - A-Team.  All rights reserved.</p>
 		</div>
 	</div>
   </div>
